--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          user: Kyzegs
+          user: astonge
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Amsterdam
